feat(添加了用于room数据库的注解处理器): 从app壳工程获取db实例

--- a/common/src/main/res/values/themes.xml
+++ b/common/src/main/res/values/themes.xml
@@ -48,6 +48,9 @@
         <item name="colorSurfaceContainerHigh">@color/md_theme_surfaceContainerHigh</item>
         <item name="colorSurfaceContainerHighest">@color/md_theme_surfaceContainerHighest</item>
 
+        <item name="android:windowContentTransitions">true</item>
+
+<!--        <item name="android:windowReturnTransition"></item>-->
 
         <item name="android:windowSplashScreenBackground" tools:targetApi="s">
             @color/md_theme_onPrimary
