--- a/module_login/src/main/res/layout/fragment_login.xml
+++ b/module_login/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,15 @@
 
     tools:context=".ui.LoginActivity">
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="返回"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInput_layout_email"
         android:layout_width="match_parent"
