--- a/module_login/src/main/res/navigation/login_graph.xml
+++ b/module_login/src/main/res/navigation/login_graph.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_graph"
     app:startDestination="@id/fragment_loginDestination_login">
     <fragment
         android:id="@+id/fragment_loginDestination_login"
-        android:name="com.example.module_login.ui.login.LoginFragment">
-        <action
-            android:id="@+id/action_fragment_loginDestination_login_to_fragment_loginDestination_register"
-            app:destination="@id/fragment_loginDestination_register" />
-        <deepLink app:uri="android-app://android/login" />
-    </fragment>
+        android:name="com.example.module_login.ui.login.LoginFragment" />
     <fragment
         android:id="@+id/fragment_loginDestination_register"
         android:name="com.example.module_login.ui.register.RegisterFragment" />
+
 </navigation>
