feat(project): 添加了字符模块
通过这个模块可以进行书法文字智能评分，作为主要业务。

--- a/module_mine/src/main/res/layout/fragment_mine.xml
+++ b/module_mine/src/main/res/layout/fragment_mine.xml
@@ -9,6 +9,11 @@
             name="item"
             type="com.example.feature_mine.data.model.UserInfoResult" />
     </data>
+<com.scwang.smart.refresh.layout.SmartRefreshLayout
+    android:id="@+id/smart_refresh_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,4 +33,5 @@
             android:layout_height="match_parent"
             android:visibility="@{item == null ? View.VISIBLE : View.GONE}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+</com.scwang.smart.refresh.layout.SmartRefreshLayout>
 </layout>
