--- a/module_login/src/main/res/layout/fragment_register.xml
+++ b/module_login/src/main/res/layout/fragment_register.xml
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
-        android:autofillHints="@string/prompt_password"
+
         android:hint="@string/prompt_code"
         app:layout_constraintEnd_toStartOf="@+id/button_code"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:imeActionLabel="@string/action_sign_in_short"
             android:imeOptions="actionDone"
-            android:inputType="textPassword"
+            android:inputType="number"
             android:selectAllOnFocus="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
