--- a/module_navigation/src/main/res/navigation/app_graph.xml
+++ b/module_navigation/src/main/res/navigation/app_graph.xml
@@ -2,8 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_graph"
-    app:startDestination="@id/community_graph">
+    app:startDestination="@id/character_graph">
+    <include app:graph="@navigation/character_graph" />
     <include app:graph="@navigation/community_graph" />
     <include app:graph="@navigation/mine_graph" />
-
 </navigation>
