--- a/module_character/src/main/res/navigation/character_graph.xml
+++ b/module_character/src/main/res/navigation/character_graph.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/characterFragment"
         android:name="com.example.module_character.ui.CharacterFragment"
-        android:label="CharacterFragment" />
+        android:label="CharacterFragment">
+        <action
+            android:id="@+id/action_characterFragment_to_scoreFragment"
+            app:destination="@id/scoreFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/scoreFragment"
+        android:name="com.example.module_character.ui.ScoreFragment"
+        android:label="ScoreFragment" />
 </navigation>
