--- a/module_mine/src/main/res/layout/fragment_mine.xml
+++ b/module_mine/src/main/res/layout/fragment_mine.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.example.feature_mine.data.model.UserInfoResult" />
+            type="com.example.feature_mine.data.model.result.UserInfoResult" />
     </data>
 <com.scwang.smart.refresh.layout.SmartRefreshLayout
     android:id="@+id/smart_refresh_layout"
