--- a/module_mine/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/module_mine/src/main/res/layout/fragment_bottom_sheet.xml
@@ -18,17 +18,18 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/more"
+        android:layout_marginRight="48dp"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:textSize="16dp"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:gravity="start|center_vertical"
         android:paddingStart="16dp"
         android:text="moreInfo"
         android:textColor="@color/black"
-        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_more"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +39,7 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/change_background" />
@@ -46,7 +47,8 @@
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/changeBackGround"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_marginRight="48dp"
+        android:layout_height="58dp"
         android:layout_marginStart="20dp"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
@@ -54,7 +56,7 @@
         android:paddingStart="16dp"
         android:text="changeBackGround"
         android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_backGround"
         app:layout_constraintTop_toBottomOf="@+id/more" />
