--- a/module_navigation/src/main/res/navigation/app_graph.xml
+++ b/module_navigation/src/main/res/navigation/app_graph.xml
@@ -4,6 +4,6 @@
     android:id="@+id/app_graph"
     app:startDestination="@id/character_graph">
     <include app:graph="@navigation/character_graph" />
-    <include app:graph="@navigation/community_graph" />
+<!--    <include app:graph="@navigation/community_graph" />-->
     <include app:graph="@navigation/mine_graph" />
 </navigation>
